--- a/pokemon/pokemon/Resources/Localizable/en.lproj/Localizable.strings
+++ b/pokemon/pokemon/Resources/Localizable/en.lproj/Localizable.strings
@@ -10,6 +10,7 @@
 
 // MARK: - Pokemon list
 "pokemon.empty.list" = "We couldn't catch any pokemon to present";
+"pokemon.empty.search.placeholder" = "Enter Pokémon full name or ID";
 
 // MARK: - Details
 "pokemon.details.about" = "About";
@@ -25,11 +26,13 @@
 "pokemon.cell.about.pokemonType" = "Type: ";
 "pokemon.cell.about.weight" = "Weight: ";
 "pokemon.cell.about.height" = "Height: ";
-"pokemon.cell.abilities" = "Abilities: ";
+"pokemon.cell.abilities" = "Ability: ";
 
 // MARK: - Error Messages
 "pokemon.alert.error.ok.button" = "Ok.";
 "pokemon.alert.error.title" = "ℹ️ \nSomething wrong happens.";
 "pokemon.alert.error.message.MissingData" = "We cannot carry out this operation right now.";
 "pokemon.alert.error.message.GeneralError" = "Please, try again later.";
+"pokemon.alert.error.message.error.find.pokemon" = "Can't find the pokemon.";
+"pokemon.alert.error.message.cant.find.pokemon" = "Pokemon doesn't exist";
 
